--- a/src/layouts/Base/Layouts.module.scss
+++ b/src/layouts/Base/Layouts.module.scss
@@ -10,12 +10,14 @@
     .sidebarRight {
         background: white;
         padding: 10px;
+        min-height: 50vh;
         border-right: 1px solid lightgray;
     }
 
     .sidebarLeft {
         background: white;
         padding: 10px;
+        min-height: 50vh;
         border-left: 1px solid lightgray;
     }
 
