--- a/src/layouts/Base/Layouts.module.scss
+++ b/src/layouts/Base/Layouts.module.scss
@@ -22,11 +22,6 @@
 
     .content {
         padding: 10px;
-        height: 86vh;
-    }
-
-    .footer {
-        background: white;
-        border: 1px solid lightgray;
+        min-height: 91vh;
     }
 }
