--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -1,8 +1,11 @@
 .wrapper {
     display: block;
-    width: fit-content;
     background-color: white;
     box-shadow: 0 0 10px lightgray;
-    padding: 2rem;
-    border-radius: 10px;
+    padding: 1.5rem;
+    border-radius: 6px;
+
+    &--fit {
+        width: fit-content;
+    }
 }
