--- a/src/pages/Tasks/TasksPage.module.scss
+++ b/src/pages/Tasks/TasksPage.module.scss
@@ -1,16 +1,8 @@
 .wrapper {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
+    overflow: auto;
 
-    .drag {
-        background: white;
-        padding: 10px;
-        width: 300px;
-
-        .dragger {
-            background: gray;
-            margin-top: 10px;
-        }
+    .draggable {
+        display: flex;
+        gap: 1rem;
     }
 }
