--- a/src/components/inProgress/Inprogress.scss
+++ b/src/components/inProgress/Inprogress.scss
@@ -1,6 +1,16 @@
 .inprogress{
+    &__container{
+        margin: 0 auto;
+        text-align: center;
+    }
     &__img{
         width: 700px;
         margin: 50px 0 0 60px;
+    }
+    &__title{
+        color: #1959D6;
+        font-size: 30px;
+        font-weight: 600;
+        padding-top: 10px;
     }
 }
