--- a/src/pages/SMM/SMM.module.scss
+++ b/src/pages/SMM/SMM.module.scss
@@ -110,4 +110,46 @@
         display: flex;
         justify-content: space-between;
     }
+    &__form{
+        display: flex;
+        align-items:center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    &__img{
+        width: 60px;
+    }
+    &__redbtn{
+        width: 200px;
+        padding: 5px 30px;
+        background-color: #CC2424;
+        color: #fff;
+        border-radius: 10px;
+        border: 2px solid #CC2424;
+        cursor: pointer;
+        font-weight: bold;
+        &:hover{
+            background-color: transparent;
+            color: #CC2424;
+        }
+    }
+    &__greenbtn{
+        width: 200px;
+        padding: 5px 30px;
+        background-color: #3CCC24;
+        color: #fff;
+        border-radius: 10px;
+        border: 2px solid #3CCC24;
+        font-weight: bold;
+        cursor: pointer;
+        &:hover{
+            background-color: transparent;
+            color: #3CCC24;
+        }
+    }
+    &__div{
+        display: flex;
+        justify-content: space-around;
+        padding-top: 50px;
+    }
 }
