--- a/src/layouts/Base/Layouts.module.scss
+++ b/src/layouts/Base/Layouts.module.scss
@@ -4,6 +4,14 @@
     // height: 100vh;
     min-height: 100vh;
 
+    &::-webkit-scrollbar {
+        width: 2px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
     .header {
         background: white;
         border-bottom: 1px solid lightgray;
@@ -13,20 +21,58 @@
     }
 
     .sidebarRight {
+        overflow: auto;
+        height: 100vh;
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
         background: white;
-        margin-top: 60px;
+        padding-top: 70px;
         border-right: 1px solid lightgray;
+
+        &::-webkit-scrollbar {
+            width: 2px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        }
     }
 
     .sidebarLeft {
+        overflow: auto;
+        height: 100vh;
+        position: fixed;
+        right: 0;
+        top: 0;
+        bottom: 0;
         background: white;
-        margin-top: 60px;
         padding: 10px;
+        padding-top: 70px;
         border-left: 1px solid lightgray;
+
+        &::-webkit-scrollbar {
+            width: 2px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        }
     }
 
     .content {
-        margin-top: 50px;
-        padding: 10px;
+        padding-top: 70px;
+        min-height: 100vh;
+        padding: 70px 15px 15px 15px;
+        margin: 0 250px;
+
+        &::-webkit-scrollbar {
+            width: 2px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        }
     }
 }
